--- a/Lesson02/StartOfLesson/ToDo/Views/ToDo/Delete.cshtml
+++ b/Lesson02/StartOfLesson/ToDo/Views/ToDo/Delete.cshtml
@@ -35,6 +35,12 @@
         <dd>
             @Html.DisplayFor(model => model.Status)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Created)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Created)
+        </dd>
     </dl>
 
     <form asp-action="Delete">
