--- a/Lesson04/EndOfLesson/ToDo/Views/ToDo/Details.cshtml
+++ b/Lesson04/EndOfLesson/ToDo/Views/ToDo/Details.cshtml
@@ -40,7 +40,14 @@
         <dd>
             @Html.DisplayFor(model => model.Created)
         </dd>
-    </dl>
+        <dt>
+            @Html.DisplayNameFor(model => model.Tags)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Tags.Value)
+        </dd>
+
+</dl>
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
