--- a/Lesson04/EndOfLesson/ToDo/Views/ToDo/Edit.cshtml
+++ b/Lesson04/EndOfLesson/ToDo/Views/ToDo/Edit.cshtml
@@ -1,7 +1,10 @@
 ﻿@model ToDoApp.Models.ToDo
 @inject ToDoApp.Services.IRepository repository
+@inject ToDoApp.Data.ToDoContext dbContext
 @{
-    var items = repository.Statuses.Select(x => new SelectListItem(x.Value, x.Id.ToString()));
+    var StatusItems = repository.Statuses.Select(x => new SelectListItem(x.Value, x.Id.ToString()));
+    var TagItems = dbContext.Tags.Select(x => new SelectListItem(x.Value, x.Id.ToString()));
+
 
     ViewData["Title"] = "Edit";
 }
@@ -31,8 +34,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="StatusId" class="control-label"></label>
-                <select asp-for="StatusId" asp-items="@items"></select>
+                <select asp-for="StatusId" asp-items="@StatusItems"></select>
                 <span asp-validation-for="StatusId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TagsId" class="control-label"></label>
+                <select asp-for="TagsId" asp-items="@TagItems"></select>
+                <span asp-validation-for="TagsId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Created" class="control-label"></label>
