fixed some build errors

--- a/Lesson04/EndOfLesson/ToDo/Views/ToDo/Index.cshtml
+++ b/Lesson04/EndOfLesson/ToDo/Views/ToDo/Index.cshtml
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tags)
+                @Html.DisplayNameFor(model => model.Tag)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Created)
@@ -50,7 +50,7 @@
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Tags)
+                @Html.DisplayFor(modelItem => item.Tag)
             </td>
             <td day-of-the-week asp-for="@item.Created"></td>
             <td>
