--- a/Lesson06/StartOfLesson/ToDo/Views/Shared/_Layout.cshtml
+++ b/Lesson06/StartOfLesson/ToDo/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="Tags" asp-controller="Tenant" asp-action="Index">Manage Tags</a></li>
                 </ul>
+                <partial name="_LoginPartial" />
             </div>
         </div>
     </nav>
